tests/sksl/errors/UnscopedVariableInFor.dsl.glsl

void main() {
    for (int x = 0;x < 10; ++x) ;
}
